# syrag

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  main.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: architecture.md  compatibility.md  component-contracts.md  documentation-site.md  index.md  mvp-roadmap.md  overview.md  provider-examples.md  public-api.md  releasing.md  roadmap-0.2.md  roadmap-0.3.md
docs/assets/stylesheets/: brand.css
docs/cookbook/: authentication.md  background-ingestion.md  hosted-vector-database.md  index.md  langchain.md  langgraph.md  llamaindex.md  observability.md  qdrant.md
examples/: minimal_app.py
examples/integrations/: api_key_auth_app.py  background_ingestion_app.py  hosted_qdrant_app.py  langchain_qdrant_rag.py  langchain_syrag_agent.py  langchain_syrag_routes.py  langgraph_syrag_rag.py  llamaindex_qdrant_rag.py  llamaindex_syrag_routes.py  observability_app.py  qdrant_syrag_app.py
scripts/: smoke_package.py
src/fastrag/: __init__.py  _optional.py  app.py  bootstrap.py  config.py  dependencies.py  errors.py  guardrails.py  hooks.py  main.py  observability.py  protocols.py  registry.py  routing.py  schemas.py  structured_logging.py  testing.py  tracing.py
src/fastrag/providers/: __init__.py  chunking.py  factories.py  in_memory.py  openai.py  sqlite.py
src/fastrag/services/: __init__.py  assembly.py  generation.py  ingest.py  retrieval.py  runtime.py
src/syrag/: __init__.py  _optional.py  app.py  bootstrap.py  config.py  dependencies.py  errors.py  guardrails.py  hooks.py  main.py  observability.py  protocols.py  registry.py  routing.py  schemas.py  structured_logging.py  testing.py  tracing.py
src/syrag/integrations/: __init__.py  langchain.py  llamaindex.py
src/syrag/providers/: __init__.py  chroma.py  chunking.py  factories.py  faiss.py  google.py  in_memory.py  openai.py  qdrant.py  sqlite.py
src/syrag/services/: __init__.py  assembly.py  generation.py  ingest.py  retrieval.py  runtime.py
tests/: test_app.py  test_bootstrap.py  test_chunking.py  test_defaults.py  test_dependencies.py  test_error_handling.py  test_errors.py  test_guardrails.py  test_in_memory_providers.py  test_ingest_route.py  test_ingestion_pipeline.py  test_langchain_integration.py  test_llamaindex_integration.py  test_observability.py  test_openapi.py  test_packaging.py  test_pipeline_service.py  test_protocols.py  test_provider_contracts.py  test_provider_packages.py  test_public_api.py  test_query_route.py  test_registry.py  test_request_context.py  test_retrieval_strategy.py  test_schemas.py  test_structured_logging.py  test_testing_toolkit.py  test_tracing.py
