[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syrag"
version = "0.2.0"
description = "Production-oriented Python framework for building RAG services on top of FastAPI."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "A. Marzoug" },
]
requires-python = ">=3.12,<3.14"
urls = { Repository = "https://github.com/a-marzoug/syrag", Issues = "https://github.com/a-marzoug/syrag/issues", Documentation = "https://a-marzoug.github.io/syrag/" }
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "fastapi",
    "llm",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.136.0",
    "opentelemetry-api>=1.0.0",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
chroma = [
    "chromadb>=1.0.0",
]
faiss = [
    "faiss-cpu>=1.8.0",
]
google = [
    "google-genai>=1.0.0",
]
langchain = [
    "httpx>=0.28.1",
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=0.3.0",
]
llamaindex = [
    "httpx>=0.28.1",
    "llama-index-core>=0.14.0",
]
openai = [
    "httpx>=0.28.1",
]
server = [
    "uvicorn[standard]>=0.44.0",
]
testing = [
    "httpx>=0.28.1",
]
all = [
    "chromadb>=1.0.0",
    "faiss-cpu>=1.8.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "llama-index-core>=0.14.0",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
syrag = "syrag.main:run"

[dependency-groups]
dev = [
    "chromadb>=1.0.0",
    "faiss-cpu>=1.8.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "llama-index-core>=0.14.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "uvicorn[standard]>=0.44.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/syrag"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.codex",
    "/.gemini",
    "/.github",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/build",
    "/dist",
    "/task.md",
    "/.python-version",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["syrag"]
mypy_path = ["src"]
exclude = ["^examples/integrations/"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.uv]
default-groups = ["dev"]
package = true
